# swolfpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AD.py  AD_BW2.csv  AD_DB.py  AD_Input.py  AD__Static Calculation.py  AD_stat.xlsx  AD_subprocess.py  AUTHORS.rst  CONTRIBUTING.rst  Collection.py  Collection_1.py  Collection_BW2.csv  Collection_DB.py  CommonData.py  CommonData_script.py  Comp_Input.py  Comp_Input_1.py  Composting exchanges key.py  Composting.py  Composting_BW2.csv  Composting_Input.csv  Composting_Input.py  Composting_Input_script.py  Composting_Static Calculation.py  Composting_Write from CSV.py  Demo _ LF.py  Demo _ Organic Analysis.py  Demo.py  Demo2.py  Demo3.py  Demo5.py  Demo6.py  Demo_Collection.py  Demo_Collection_MC.py  Demo_Collection_full.py  Distance.csv  (+126 more)
.github/workflows/: python-app.yml  python-package-conda.yml  test_windows.yml
Archive/: Import ecoinvent.py  LCA _ help.py  biosphere_key.py  bw2_LCA.py
Manuscript Notebooks/Base Case/: Base_Case.ipynb  Contribution_top_acts_raw_data.csv  Contribution_top_emissions_raw_data.csv  SWM_network_BaseCase.gv
Manuscript Notebooks/Monte Carlo Simulation/: MC_Correlation_RawData.csv  MonteCarlo.ipynb  Performance_raw_data.csv
Manuscript Notebooks/Optimization/: BaseCase.JSON  BaseCase.csv  BaseCase.html  Iterations_Scenario1.csv  Iterations_Scenario2.csv  Iterations_Scenario3.csv  Optimization (Base Case).ipynb  Optimization (Scenarios 1-3).ipynb  OptimizeScenario1.JSON  OptimizeScenario1.html  OptimizeScenario2.JSON  OptimizeScenario2.csv  OptimizeScenario2.html  OptimizeScenario3.JSON  OptimizeScenario3.csv  OptimizeScenario3.html  SWM_network_optimization.gv  Summary.txt  Trade_Off_Figure.ipynb
PySWOLF/: Distance.py  Parameters.py  Required_keys.py  __init__.py  building_matrices.py  process_model_output.py  utils.py
PySWOLF/Data/: LF_Gas_emission_factors.csv  SF_collection_Input-Material_dependent.csv  WTE_Input.csv
PySWOLF/ProcessModels/: AD_Input_script.py  Composting_Input.py  Composting_Input_script.py  LF.py  Reprocessing.py  SF_collection.py  SS_MRF.py  SS_MRF_Input.py  SS_MRF_subprocess.py  WTE.py  WTE_Input.py  WTE_Input_script.py  flow.py
PySWOLF/UI/: PySWOLF.ui  PySWOLF_2.ui  PySWOLF_run.py  PySWOLF_ui.py  PyWOLF_Resource_rc.py
PySWOLF_ICONS/: Icon Source.pptx
docs/: Getting_started.rst  Makefile  conf.py  doc_inputdata.rst  doc_processmodels.rst  doc_pyswolf.rst  doc_swolfpy.rst  index.rst  installation.rst  make.bat  readme.rst  requirements.txt  usage.rst
pyswolf/: AD_Input.csv  AD_Input_script.py  CommonData.py  Composting.py  Distance.csv  Material_Reprocessing_BW2.csv  Material_Reprocessing_Write from CSV.py  PySWOLF.py  PySWOLF.ui  SS.MRF.xlsb  SWMCommonData.xlsx  SWOLF_method.py  Tutorial.ipynb  WTE_Input_script.py  __init__.py  bw2_ContributionAnalyzer.py  cli.py  demo_COL_WTE_LF.py  material_properties.py  process_model_output.py
swolfpy/: Distance.py  LCA_matrix.py  MC.py  Monte_Carlo.py  Optimization.py  Parameters.py  ProcessDB.py  Project.py  Required_keys.py  SWOLF_method.py  Technosphere.py  __init__.py  __main__.py  building_matrices.py  environment_dev.yml  log_config.py  process_model.py  process_model_output.py  project_class.py  swolfpy_method.py  test.py  utils.py
swolfpy/Data/: AD_Input.csv  CommonData.csv  Composting_Input.csv  LF_Input.csv  LF_Leachate_Allocation.xlsx  LF_Leachate_Coeff.csv  Material properties - process modles.xlsx  Material properties.xlsx  Material_Reprocessing_BW2.csv  Reprocessing_input.csv  SF_collection_Input.csv  SF_input_col.csv  SS.MRF_BW2.xlsb  SWOLF_AccountMode_LCI DATA.csv  Technosphere_LCI.csv  Technosphere_References.csv  WTE_Input.csv
swolfpy/ProcessModels/: AD.py  AD_Input.py  CommonData.py  CommonData_script.py  Comp.py  Comp_Input.py  Composting.py  Composting_subprocess.py  Convert_reprocessing_model_to_input.py  InputData.py  LF.py  LF_Input.py  ProcessModel.py  Reproc.py  Reproc_Input.py  Reprocessing.py  Reprocessing_Input.py  SF_Col.py  SF_Col_Input.py  SF_collection.py  SF_collection_Input.py  SS_MRF.py  SS_MRF_Input.py  Technosphere.py  WTE.py  __init__.py
swolfpy/UI/: MC.ui  MC_ui.py  PySWOLF.ui  PySWOLF_2.py  PySWOLF_run.py  PySWOLF_ui.py  PyWOLF_Resource.qrc  PyWOLF_Resource_rc.py  Reference.ui  Reference_ui.py  Table_from_pandas.py  Workers.py  adv_opt.ui  adv_opt_ui.py
swolfpy/UI/PySWOLF_ICONS/: Icons.vsdx
tests/: __init__.py  test_pyswolf.py  test_swolfpy.py
